# ai-e2e-framework

./: .env  .gitignore  BRIDGE_MODE_GUIDE.md  PLAYWRIGHT_INTEGRATION_GUIDE.md  README.md  pyproject.toml  requirements.txt
ai-e2e-framework/: README.md  USAGE.md  config.ini  pytest.ini  requirements.txt
ai-e2e-framework/ai_actions/: __init__.py  agent_page_actions.py  base_executor.py
ai-e2e-framework/test_data/: sample_excel.xlsx
ai-e2e-framework/tests/: test_agent_actions_basic.py  test_agent_journey.py  test_framework_basic.py
ai-e2e-framework/ts_executor/: .env  package-lock.json  package.json  runner.ts
ai-e2e-framework/ts_executor/midscene_run/cache/: cache_test_1.cache.yaml  cache_timing_test.cache.yaml
ai-e2e-framework/ts_executor/midscene_run/report/: playwright-2025-09-24_15-31-15-16c59e7a.html  playwright-2025-09-24_16-06-32-1a25025c.html  playwright-2025-09-24_16-06-39-756e39ef.html  playwright-2025-09-24_16-14-01-49736a2e.html  playwright-2025-09-24_16-14-08-7352a6fb.html
midscene_docs/: MCP_service.md  Playwright_integration.md  cache.md
